<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/fragment_representative_motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchArea"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:id="@+id/button_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/find_my_representatives"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/guidelineEndAddress"
                app:layout_constraintStart_toStartOf="@id/guidelineStartAddress"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <Button
                android:id="@+id/button_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/use_my_location"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/guidelineEndAddress"
                app:layout_constraintStart_toStartOf="@id/guidelineStartAddress"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

            <EditText
                android:id="@+id/address_line_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                android:text="@{viewModel.address.line1}"
                app:layout_constraintEnd_toStartOf="@id/guidelineEndAddress"
                app:layout_constraintStart_toStartOf="@id/guidelineStartAddress"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <EditText
                android:id="@+id/address_line_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                android:text="@{viewModel.address.line2}"
                app:layout_constraintEnd_toStartOf="@id/guidelineEndAddress"
                app:layout_constraintStart_toStartOf="@id/guidelineStartAddress"
                app:layout_constraintTop_toBottomOf="@id/address_line_1" />


            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:text="@{viewModel.address.city}"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintStart_toStartOf="@id/guidelineStartAddress"
                app:layout_constraintTop_toBottomOf="@id/address_line_2" />

            <EditText
                android:id="@+id/zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/zip"
                android:inputType="number"
                android:maxLength="5"
                android:text="@{viewModel.address.zip}"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintStart_toStartOf="@id/guidelineStartAddress"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints=""
                android:entries="@array/states"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:layout_constraintEnd_toStartOf="@id/guidelineEndAddress"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city"
                app:stateValue="@{viewModel.address.state}" />

            <TextView
                android:id="@+id/search_title"
                style="@style/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@string/representative_search"
                app:layout_constraintEnd_toStartOf="@id/guidelineEndAddress"
                app:layout_constraintStart_toStartOf="@id/guidelineStartAddress"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStartAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/default_padding" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEndAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/default_padding" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTopAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/default_padding" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBottomAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/default_padding" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/representativesArea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchArea">


            <TextView
                android:id="@+id/representative_title"
                style="@style/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@string/my_representatives"
                app:layout_constraintEnd_toStartOf="@id/guidelineEndRepresentatives"
                app:layout_constraintStart_toStartOf="@id/guidelineStartRepresentatives"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/list_placeholder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guidelineEndRepresentatives"
                app:layout_constraintStart_toStartOf="@id/guidelineStartRepresentatives"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                motion:visibilityMode="ignore" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTopRepresentatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/default_padding" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBottomRepresentatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/default_padding" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStartRepresentatives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/default_padding" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEndRepresentatives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/default_padding" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_representatives"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guidelineEndRepresentatives"
                app:layout_constraintStart_toStartOf="@id/guidelineStartRepresentatives"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                tools:listitem="@layout/item_representative" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />

        <variable
            name="address"
            type="com.example.android.politicalpreparedness.network.models.Address" />
    </data>
</layout>